Revert "Resolve "Behind Commitments""

--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,10 @@ header {
 	align-items: center;
 }
 footer {
-	background-color: #008060;
-
+	background-color: #fff833;
 }
 body {
-	background-color: #004c3f;
-	color: #ffffff;
+	background-color: #fff3c2;
 	display: flex;
 	width: 100%;
 }
@@ -19,32 +17,16 @@ article img {
 	width: 150px;
 	height: 225px;
 }
-hr {
-	border-top: 1px solid #003d32;
-}
 .jumbotron {
-	background-color: #008060;
+	background-color: #fff833;
 	padding: 10px;
 	margin: 0px;
 }
 .disclaimer {
 	font-size: 12px;
 }
-.odd {
-	background-color: #09594c;
-}
-.response {
-	display: none;
-}
-.alert {
-	background-color: #e8b431;
-	position: fixed;
-	width: 98%;
-	padding: 30px;
-	z-index: 999;
-}
-.alert.active {
-	width: 78%;
+.discommend {
+	background-color: #fff833;
 }
 #logo {
 	width: 75px;
@@ -57,7 +39,8 @@ hr {
 	left: 0;
 	height: 100vh;
 	z-index: 999;
-	background-color: #166357; 
+	background-color: #edcc5f; 
+	color: #fff;
 	transition: all 0.3s;
 	overflow: auto;
 }
@@ -65,28 +48,12 @@ hr {
     margin-left: -250px;
 }
 #sidebar .sidebar-header {
-	padding: 10px;
-	background-color: #008060;
-	text-align: center;
+	padding: 20px;
+	background: #ebc33f;
 }
 #sidebar .sidebar-content {
 	padding: 10px;
 	text-align: center;
-}
-#sidebarCollapse {
-	position: fixed;
-	background-color: #008060;
-	border-width: 0px;
-	margin-top: 5px;
-}
-#sidebarCollapseRsp {
-	display: none;
-	background-color: #008060;
-	border: 1px solid #166357;
-}
-#sidebarCollapse img, #sidebarCollapseRsp img {
-	width: 30px;
-	height: 35px;
 }
 #content-wrapper {
 	width: calc(100% - 250px);
@@ -100,16 +67,24 @@ hr {
 #content-wrapper.active {
 	width: 100%;
 }
+#sidebarCollapse {
+	position: fixed;
+	background-color: #daa520;
+	border-color: #a67700;
+}
+#sidebarCollapse img {
+	width: 30px;
+	height: 35px;
+}
 #search {
-	background-color: #468f7c;
-	color: #ffffff;
+	background-color: #faeaaa;
 	padding: 5px 10px;
 }
 #result {
 	padding: 5px;
-	min-height: 43vh;
+	min-height: 249px;
 }
-#srch-rslt-1 div, #srch-rslt-2 div, #srch-rslt-3 div {
+#result div {
 	padding: 10px;
 	display: flex;
 }
@@ -123,34 +98,4 @@ hr {
 }
 #result td[rowspan="3"] {
 	text-align: right;
-}
-
-/*Responsive Style*/
-@media (max-width: 680px) {
-    .alert {
-		width: 94%;
-		padding: 10px;
-	}
-	.response {
-		display: initial;
-	}
-	#sidebar {
-        width: 100%;
-    }
-    #sidebar.active {
-        width: 0%;
-    }
-	#sidebarCollapseRsp {
-		display: initial;
-	}
-	#content-wrapper {
-		width: 0%;
-		overflow: hidden;
-	}
-	#result td {
-		width: 100%;
-	}
-	#result td[rowspan="3"] {
-		display: none;
-	}
 }
